--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ path = "src/main.rs"
 [dependencies]
 serde = { version = "1.0.188", features = ["derive"] }
 reqwest = { version = "0.11.20", features = ["blocking", "json"] }
+serde_json = "1.0"
+simsearch = "0.2"
