--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,5 @@ path = "src/main.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0.188", features = ["derive"] }
 reqwest = { version = "0.11.20", features = ["blocking", "json"] }
-serde_json = "1.0"
-simsearch = "0.2"
+colored = "2"
