--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "the-septa-times"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 description = "A CLI application for the SEPTA API"
 repository = "https://github.com/dotzenith/TheSeptaTimes.rs"
@@ -22,3 +22,4 @@ scraper = "0.18.1"
 bincode = "1.3.3"
 anyhow = "1.0.75"
 colored = "2"
+fuzzy-matcher = "0.3.7"
