--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ platform-dirs = "0.3.0"
 fuzzy-matcher = "0.3.7"
 clap = { version = "4.4.9", features = ["cargo"] }
 serde = { version = "1.0.192", features = ["derive"] }
-reqwest = { version = "0.11.20", features = ["blocking", "json", "rustls-tls"] }
+reqwest = { version = "0.11.20", default-features = false, features = ["blocking", "json", "rustls-tls"] }
 
 # The profile that 'cargo dist' will build with
 [profile.dist]
