--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "the-septa-times"
 version = "0.5.3"
 edition = "2021"
 description = "A CLI application for the SEPTA API"
+homepage = "https://github.com/dotzenith/TheSeptaTimes.rs"
 repository = "https://github.com/dotzenith/TheSeptaTimes.rs"
 license = "MIT"
 autobins = false
@@ -32,9 +33,9 @@ lto = "thin"
 # Config for 'cargo dist'
 [workspace.metadata.dist]
 # The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
-cargo-dist-version = "0.10.0"
+cargo-dist-version = "0.14.1"
 # CI backends to support
-ci = ["github"]
+ci = "github"
 # The installers to generate for each app
 installers = ["shell", "powershell", "homebrew"]
 # A GitHub repo to push Homebrew formulas to
@@ -45,6 +46,8 @@ targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-da
 publish-jobs = ["homebrew"]
 # Publish jobs to run in CI
 pr-run-mode = "skip"
+# Whether to install an updater program
+install-updater = false
 
 [workspace.metadata.dist.github-custom-runners]
 aarch64-unknown-linux-gnu = "buildjet-2vcpu-ubuntu-2204-arm"
