--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "the-septa-times"
-version = "0.9.4"
+version = "0.9.5"
 edition = "2021"
 description = "A SEPTA app for the terminal"
 homepage = "https://github.com/dotzenith/TheSeptaTimes.rs"
@@ -20,9 +20,14 @@ platform-dirs = "0.3.0"
 fuzzy-matcher = "0.3.7"
 clap = { version = "4.4.9", features = ["cargo"] }
 serde = { version = "1.0.192", features = ["derive"] }
-reqwest = { version = "0.11.20", default-features = false, features = ["blocking", "json", "rustls-tls"] }
+ureq = "3.0.0"
+url = "2.5.4"
+
+[profile.release]
+lto = true
+panic = "abort"
+strip = true
 
 # The profile that 'cargo dist' will build with
 [profile.dist]
 inherits = "release"
-lto = "thin"
