--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ bincode = "1.3.3"
 anyhow = "1.0.75"
 platform-dirs = "0.3.0"
 fuzzy-matcher = "0.3.7"
-clap = { version = "4.4.9", features = ["cargo"] }
+clap = { version = "4.4.9", features = ["cargo", "derive"] }
 serde = { version = "1.0.192", features = ["derive"] }
 ureq = { version = "3.0.1", features = ["json"] }
 url = "2.5.4"
