--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,12 +16,12 @@ path = "src/main.rs"
 colored = "2"
 bincode = "1.3.3"
 anyhow = "1.0.75"
-platform-dirs = "0.3.0"
 clap = { version = "4.4.9", features = ["cargo", "derive"] }
 serde = { version = "1.0.192", features = ["derive"] }
 ureq = { version = "3.0.1", features = ["json"] }
 url = "2.5.4"
 nucleo-matcher = "0.3.1"
+directories = "6.0.0"
 
 [profile.release]
 lto = true
