--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,8 @@ clap = { version = "4.4.9", features = ["cargo", "derive"] }
 serde = { version = "1.0.192", features = ["derive"] }
 ureq = { version = "3.0.1", features = ["json"] }
 url = "2.5.4"
-nucleo-matcher = "0.3.1"
 directories = "6.0.0"
+skimple = "1.0.0"
 
 [profile.release]
 lto = true
