--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ colored = "2"
 bincode = "1.3.3"
 anyhow = "1.0.75"
 clap = { version = "4.4.9", features = ["cargo", "derive"] }
+clap_complete = "4.5"
 serde = { version = "1.0.192", features = ["derive"] }
 ureq = { version = "3.0.1", features = ["json"] }
 url = "2.5.4"
