--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -15,6 +15,8 @@ tap = "dotzenith/homebrew-tap"
 targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
 # Publish jobs to run in CI
 publish-jobs = ["homebrew"]
+# Add shell completion step usually clobbered by dist
+post-announce-jobs = ["./patch-homebrew"]
 # Which actions to run on pull requests
 pr-run-mode = "skip"
 # Whether to install an updater program
